added css for select tag

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -266,3 +266,12 @@ header p {
     background-color: yellow;
     color: rgb(50, 50, 50);
 }
+
+.addtask select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
