--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,10 @@
 body {
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(242, 242, 242);
 }
 
 header {
     
-    background-color: yellow;
+    background-color: rgb(46, 46, 157);
     border-radius: 20px;
     margin: auto;
     padding: 10px;
@@ -15,16 +15,16 @@ header {
 
 header span {
     border-radius: 20px;
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(46, 46, 157);
     padding: 20px;
     font-size: 2em;
-    color: yellow;
+    color: white;
 }
 header span:hover{
     cursor:pointer;
-    border:5px solid rgb(50, 50, 50);
-    background-color: yellow;
-    color: rgb(50, 50, 50);
+
+    background-color: white;
+    color:rgb(46, 46, 157);
 }
 
 header a {
@@ -33,62 +33,61 @@ header a {
 
 header p {
     font-size: 2em;
-    color: rgb(50, 50, 50);
+    color: rgb(242, 242, 242);
 }
 
 .home {
-    max-width: 50%;
-    margin: auto;
-    margin-top: 50px;
+    background-color: #ccc;
+    border-radius: 20px;
+    margin: 50px;
+    padding:20px;
     display: flex;
     flex-direction: column;
 }
 
 .home h1{
   
-    color:yellow;
+    color:rgb(46, 46, 157);
     margin:auto ;
 
 }
 .taskcard {
-    background-color: yellow;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    box-shadow: 2px  2px 2px;
     border-radius: 20px;
-    margin: 20px;
-    padding: 20px;
+    border-left:20px solid yellow;
+    margin: 10px;
+    padding:5px;
     position: relative;
+    transition: transform 0.2s ease-in-out; 
+    z-index: 1; 
+    
+   }
+
+.taskcard:hover {
+    transform: scale(1.02); 
+    z-index: 2; 
 }
 
-.taskcard span {
-    border-radius: 18px;
-    border:5px solid yellow;
-    background-color: rgb(50, 50, 50);
-    padding: 20px;
-    color: yellow;
-    position: absolute;
-    bottom:0;
-    right: 0;
-}
 
-.taskcard span:hover {
-    cursor:pointer;
-    border:5px solid rgb(50, 50, 50);
-    background-color: yellow;
-    color: rgb(50, 50, 50);
-}
+
 
 .addtask {
    
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 80vh;
 }
 
 .addtask form {
-    background-color: yellow;
+    background-color: white;
     padding: 20px;
     border-radius: 10px;
-    border: 3px solid rgb(50, 50, 50);
+    border: 3px solid rgb(46, 46, 157);
     max-width: 400px; 
     width: 100%;
 }
@@ -110,7 +109,7 @@ header p {
 .addtask button {
     width: 100%;
     padding: 10px;
-    background-color: rgb(50, 50, 50);
+    background-color:rgb(46, 46, 157);
     color: white;
     border: none;
     border-radius: 5px;
@@ -120,8 +119,8 @@ header p {
 
 
 .addtask button:hover {
-    background-color: rgb(32, 31, 31);
-    color: yellow;
+    background-color: rgb(28, 28, 101);
+    color: white;
 }
 .error{
     background-color: rgb(245, 145, 145);
@@ -139,12 +138,15 @@ header p {
     align-items: center;
     height: 60vh;
 }
+.login h1{
+    color:rgb(46, 46, 157);
+}
 
 .login form {
-    background-color: yellow;
+    background-color: white;
     padding: 20px;
     border-radius: 10px;
-    border: 3px solid rgb(50, 50, 50);
+    border: 4px solid rgb(46, 46, 157);
     max-width: 400px; 
     width: 100%;
 }
@@ -166,7 +168,7 @@ header p {
 .login button {
     width: 100%;
     padding: 10px;
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(46, 46, 157);
     color: white;
     border: none;
     border-radius: 5px;
@@ -176,15 +178,15 @@ header p {
 
 
 .login button:hover {
-    background-color: rgb(32, 31, 31);
-    color: yellow;
+    background-color: rgb(28, 28, 101);
+    color: white;
 }
 .login a {
     
     width: 100%;
     padding: 10px;
-    background-color: rgb(50, 50, 50);
-    color: yellow;
+    background-color: rgb(46, 46, 157);
+    color: white;
     text-decoration: none;
     border: none;
     border-radius: 5px;
@@ -200,12 +202,15 @@ header p {
     align-items: center;
     height: 60vh;
 }
+.register h1{
+    color:rgb(46, 46, 157);
+}
 
 .register form {
-    background-color: yellow;
+    background-color: white;
     padding: 20px;
     border-radius: 10px;
-    border: 3px solid rgb(50, 50, 50);
+    border: 3px solid rgb(46, 46, 157);
     max-width: 400px; 
     width: 100%;
 }
@@ -227,7 +232,7 @@ header p {
 .register button {
     width: 100%;
     padding: 10px;
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(46, 46, 157);
     color: white;
     border: none;
     border-radius: 5px;
@@ -237,15 +242,15 @@ header p {
 
 
 .register button:hover {
-    background-color: rgb(32, 31, 31);
-    color: yellow;
+    background-color: rgb(28, 28, 101);
+    color: white;
 }
 .register a {
     
     width: 100%;
     padding: 10px;
-    background-color: rgb(50, 50, 50);
-    color: yellow;
+    background-color: rgb(46, 46, 157);
+    color: white;
     text-decoration: none;
     border: none;
     border-radius: 5px;
@@ -256,15 +261,15 @@ header p {
 
 .logout{
     padding: 20px;
-    background-color: rgb(50, 50, 50);
-    color: yellow;
+    background-color: white;
+    color: rgb(46, 46, 157);
     border-radius: 20px;
     cursor: pointer;
 }
 
 .logout:hover{
-    background-color: yellow;
-    color: rgb(50, 50, 50);
+    background-color: rgb(46, 46, 157);
+    color: white;
 }
 
 .addtask select {
